<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="error_loading_page"><![CDATA[Could not retrieve data!<br>Please try again later!]]></string>
    <string name="error_message_please_try_again">Please try again later!</string>
    <string name="something_wrong">Something went wrong. Please try again!</string>
    <string name="min">M</string>
    <string name="min_abbreviation">MIN</string>
    <string name="sec_abbreviation">SEC</string>
    <string name="secs_abbreviation">SECS</string>
    <plurals name="mins_abbreviation">
        <item quantity="one">MIN</item>
        <item quantity="other">MINS</item>
    </plurals>
    <plurals name="mins_plural">
        <item quantity="one">%d MIN</item>
        <item quantity="other">%d MINS</item>
    </plurals>
    <plurals name="likes_plural">
        <item quantity="one">%1$d LIKE</item>
        <item quantity="other">%1$d LIKES</item>
    </plurals>
    <string name="_mins_abbreviation">%d MINS</string>
    <string name="color_hash_prefix">#</string>
    <string name="string_with_ellipse">%1$s&#8230;</string>
    <string name="string_with_ellipse_and_more">%1$sMORE</string>
    <string name="more">MORE</string>
    <string name="send_to">Share Video</string>
    <string name="done">DONE</string>
    <string name="preview_ended">Preview ended</string>
    <string name="default_notification_channel_id">com.viewlift.fcm.Notification.CHANNEL_ID</string>
    <string name="default_notification_channel_name">com.viewlift.fcm.Notification.CHANNEL_NAME_READABLE</string>
    <string name="app_cms_network_connectivity_error_title">Network Connectivity</string>
    <string name="app_cms_network_connectivity_error_message">Please connect your device to a network and try again.</string>
    <string name="app_cms_network_connectivity_error_message_download">Please connect your device to a network and try again, or click OK for go to My Downloads.</string>
    <string name="app_cms_signout_error_msg">Are you sure you want to log out?</string>
    <string name="app_cms_signin_error_title">LOG IN</string>
    <string name="app_cms_signout_error_title">LOG OUT</string>
    <string name="app_cms_signup_error_title">Sign Up</string>
    <string name="app_cms_reset_password_title">Reset Password</string>
    <string name="app_cms_forgot_password_title">Forgot Password</string>
    <string name="app_cms_reset_password_success_description">Follow the instructions in the email we just sent you to reset your password.</string>
    <string name="start_watching">Start Watching</string>
    <string name="watch_now">Watch Now</string>
    <string name="app_cms_cancel_subscription_ask_for_confirmation_message">Are you sure you wish to cancel your subscription?</string>
    <string name="app_cms_data_error_title">Could Not Access Data</string>
    <string name="app_cms_data_error_message">Data is currently unavailable.  Please try again later.</string>
    <string name="app_cms_close_alert_dialog_button_text">CLOSE</string>
    <string name="app_cms_ok_alert_dialog_button_text">OK</string>
    <string name="app_cms_dismiss_alert_dialog_button_text">Dismiss</string>
    <string name="app_cms_username_input_text_hint">Name</string>
    <string name="app_cms_email_input_text_hint">Email</string>
    <string name="app_cms_password_input_text_hint">Password</string>
    <string name="app_cms_phone_input_text_hint">Phone</string>
    <string name="please_input_your_email_address_to_send_a_reset_password_link_text">Please input your email address to send a reset password link.</string>
    <string name="edit_profile_confirm_change_button_text">Update</string>
    <string name="response_failure_message">No Response Received \n\nUnable to fetch data! Please pull to refresh.</string>
    <string name="empty_history_list_message">Your history is currently empty.</string>
    <string name="empty_watchlist_message">Your watchlist is currently empty.</string>
    <string name="empty_library_message">You haven’t purchased anything.</string>
    <string name="empty_download_video_message">You haven’t downloaded anything yet.</string>
    <string name="empty_download_audio_message">You haven’t downloaded anything yet.</string>
    <string name="app_cms_currently_logged_out_message">CURRENTLY LOGGED OUT</string>
    <string name="app_cms_sign_out_label">LOG OUT</string>
    <string name="next_video_is">Next Video is:</string>
    <string name="app_cms_login_again">Your session has expired.  Please login again.</string>
    <string name="app_cms_error_user_already_exists">A user with that email already exists.</string>
    <string name="app_cms_error_email_password">Email and password are not valid.</string>
    <string name="app_cms_no_email_entered">Please enter the email to continue.</string>
    <string name="app_cms_no_password_entered">Please enter password to continue.</string>
    <string name="app_cms_edit_settings_button_text">EDIT</string>
    <string name="app_cms_account_name_title_text">Name:</string>
    <string name="app_cms_account_title_text">ACCOUNT</string>
    <string name="app_cms_account_email_title_text">Email:</string>
    <string name="app_cms_edit_profile_dialog_title">Edit Profile</string>
    <string name="app_cms_update_username_dialog_title">Update Username</string>
    <string name="app_cms_update_email_dialog_title">Update Email</string>
    <string name="reset_password_text">RESET PASSWORD</string>
    <string name="my_library">MY LIBRARY</string>
    <string name="app_cms_change_password_page_title">Change Password</string>
    <string name="app_cms_create_password_page_title">Create Password</string>
    <string name="app_cms_old_password_input_text_hint">Old Password</string>
    <string name="app_cms_new_password_input_text_hint">New Password</string>
    <string name="app_cms_confirm_password_input_text_hint">Confirm Password</string>
    <string name="app_cms_confirm_password_button_text">Change Password</string>
    <string name="add_password_edit_email">Please create password to add Email</string>
    <string name="add_password_edit_name">Please create password to add Name</string>
    <string name="media_route_menu_title">Play on&#8230;</string>
    <plurals name="countdown_seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <string name="loading_vid_on_casting">Loading on casting device..</string>
    <string name="second_abbreviation">&#160;second</string>
    <string name="seconds_abbreviation">&#160;seconds</string>
    <plurals name="min_duration_unit">
        <item quantity="one">%d MIN</item>
        <item quantity="other">%d MINS</item>
    </plurals>
    <plurals name="sec_duration_unit">
        <item quantity="one">%d SEC</item>
        <item quantity="other">%d SECS</item>
    </plurals>
    <string name="app_cms_download_tab_video_title">Video</string>
    <string name="app_cms_download_tab_audio_title">Audio</string>
    <string name="app_cms_tve_log_in">Sign In with TV Provider</string>
    <string name="app_cms_log_in_pager_title">LOG IN</string>
    <string name="app_cms_subscribe_now">SUBSCRIBE NOW</string>
    <string name="app_cms_sign_up_pager_title">SIGN UP</string>
    <string name="runtime_episodes_abbreviation"> EPISODES</string>
    <string name="songs_abbreviation">SONGS</string>
    <string name="app_cms_rent_time_dialog_button_title">Alert</string>
    <string name="app_cms_cancel_subscription_title">Cancel Subscription</string>
    <string name="drm_not_download">DRM NOT DOWNLOAD</string>
    <string name="drm_not_cast">DRM CANNOT CAST</string>
    <string name="drm_title">Video Session Expired</string>
    <string name="drm_header">Please try playing the video again.</string>
    <string name="app_cms_confirm_alert_dialog_button_text">OK</string>
    <string name="app_cms_cancel_alert_dialog_button_text">CANCEL</string>
    <string name="app_cms_cancel_subscription_confirmation_message">You have cancelled your subscription.</string>
    <string name="app_cms_cancel_subscription_not_subscribed_message">You are currently not subscribed to any plans.</string>
    <string name="app_cms_cancel_subscription_subscription_not_valid_message">Please check that the device is registered with a valid Gmail account.</string>
    <string name="app_cms_subscribtion_title">Subscription</string>
    <string name="app_cms_download_quality_title">SET YOUR DOWNLOAD QUALITY</string>
    <string name="app_cms_download_setting_listener_key">app_cms_download_setting_listener_key</string>
    <string name="app_cms_delete_history_alert_title">Delete History</string>
    <string name="app_cms_delete_one_history_item_message">Do you want to delete video from history?</string>
    <string name="app_cms_delete_all_history_items_message">Do you want to delete all videos from history?</string>
    <string name="app_cms_delete_watchlist_alert_title">Delete Watchlist</string>
    <string name="app_cms_delete_one_watchlist_item_message">Do you want to delete this content from watchlist?</string>
    <string name="app_cms_delete_all_watchlist_items_message">Do you want to delete all content from watchlist?</string>
    <string name="app_cms_download_retry_alert_title">Download could not finish</string>
    <string name="app_cms_re_download_item_message">A network issue occurred, would you like to cancel this download or retry?</string>
    <string name="app_cms_delete_download_alert_title">Delete Download</string>
    <string name="app_cms_delete_one_download_video_item_message">Do you want to delete this content from downloads?</string>
    <string name="app_cms_delete_one_download_audio_item_message">Do you want to delete audio from downloads?</string>
    <string name="app_cms_delete_all_video_download_items_message">Do you want to delete all content from downloads?</string>
    <string name="app_cms_delete_all_audio_download_items_message">Do you want to delete all audio from downloads?</string>
    <string name="app_cms_subscription_title">Subscription</string>
    <string name="app_cms_subscription_required_title">Subscription Required</string>
    <string name="app_cms_subscription_required_message">Please subscribe to continue.</string>
    <string name="app_cms_subscription_button_text">Subscribe</string>
    <string name="cancel">Cancel</string>
    <string name="continue_button">CONTINUE</string>
    <string name="confirm">Confirm</string>
    <string name="viewing_restrictions_enabled">Viewing Restrictions Enabled</string>
    <string name="enter_video_pin">Please enter your Video PIN</string>
    <string name="in_correct_pin_message">Incorrect PIN. Please try again</string>
    <string name="auth_with_google">Authenticate with Google</string>
    <string name="auth_with_facebook">Authenticate with Facebook</string>
    <string name="use_pin">Use Pin</string>
    <string name="math_problem_continue">To continue, answer the math problem below:</string>
    <string name="math_problem_error">Sorry, that\'s not the right answer. Find an adult to get help!</string>
    <string name="math_problem_header">This show is for big kids. Grab a grownup to help you watch</string>
    <string name="account">Account</string>
    <string name="billing">Billing</string>
    <string name="confirmation">Confirmation</string>
    <string name="please_enter_your_password_to_continue">Please enter your password to continue</string>
    <string name="get_social_serial_number_text">S.N.</string>
    <string name="get_social_referred_friends_title">Referred Friends</string>
    <string name="get_social_install_channel_title">install Channel</string>
    <string name="get_social_subscription_status_title">Subscription Status</string>
    <string name="get_social_subscription_date_title">Subscription Date</string>
</resources>