<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    tools:context="com.viewlift.views.fragments.MathProblemFragment">

    <Button
        android:id="@+id/watchNow"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/watch_now"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorMsg" />

    <EditText
        android:id="@+id/result"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mathProblem" />

    <ImageView
        android:id="@+id/parentHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:src="@mipmap/app_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/math_problem_error"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_goneMarginTop="20dp" />

    <TextView
        android:id="@+id/mathHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/math_problem_header"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/parentHeader"
        app:layout_constraintTop_toTopOf="@+id/parentHeader" />

    <TextView
        android:id="@+id/mathProblem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="21-2"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parentHeader"
        app:layout_goneMarginTop="20dp" />

    <TextView
        android:id="@+id/continueMath"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/math_problem_continue"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/parentHeader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/parentHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>
