<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="RtlSymmetry">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/infoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/snTv"
            android:layout_width="@dimen/get_social_sn_text_width"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingEnd="5dp"
            android:textSize="@dimen/get_social_text_size"
            android:text="@string/get_social_serial_number_text"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="@dimen/get_social_referred_friends_text_width"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/referredFriendsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/get_social_referred_friends_title"
                android:textColor="@color/white"
                android:textSize="@dimen/get_social_text_size"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mobileTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/white"
                android:visibility="gone"
                android:textSize="@dimen/get_social_text_size"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/installChannelTV"
            android:layout_width="@dimen/get_social_install_channel_text_width"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/get_social_install_channel_title"
            android:textColor="@color/white"
            android:textSize="@dimen/get_social_text_size"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subscriptionStatusTV"
            android:layout_width="@dimen/get_social_subscription_status_text_width"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/get_social_subscription_status_title"
            android:textColor="@color/white"
            android:textSize="@dimen/get_social_text_size"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subscriptionDateTV"
            android:layout_width="@dimen/get_social_subscription_date_text_width"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="10dp"
            android:text="@string/get_social_subscription_date_title"
            android:textColor="@color/white"
            android:textSize="@dimen/get_social_text_size"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/separatorView"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white"
        android:alpha="0.5"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/infoView"
        app:layout_constraintStart_toStartOf="@+id/infoView"
        app:layout_constraintEnd_toEndOf="@+id/infoView"/>

</androidx.constraintlayout.widget.ConstraintLayout>